# news-crawler

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
scripts/: run_daily.sh  run_weekly.sh
spec/: system.md  test_cases.md
src/news_crowler/: cli.py  cloud_llm.py  config.py  content.py  live_checks.py  models.py  notion_sources.py  ollama.py  openclaw_llm.py  storage.py
src/news_crowler/adapters/: base.py  google_news.py
src/news_crowler/pipelines/: daily.py  weekly.py
tests/: test_daily_pipeline.py  test_e2e_daily_job.py  test_e2e_weekly_job.py  test_google_news_adapter.py  test_live_integration_daily_weekly.py  test_live_preflight.py  test_llm_backend_switch.py  test_mocked_integration_daily_job.py  test_mocked_integration_weekly_job.py  test_openclaw_llm.py  test_weekly_pipeline.py
