[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "news-crowler"
version = "0.1.0"
description = "MVP news crawler with Notion sources and Ollama relevance/summaries"
requires-python = ">=3.11"
dependencies = [
  "requests>=2.32.0",
  "feedparser>=6.0.11",
  "beautifulsoup4>=4.12.3"
]

[project.scripts]
news-crowler = "news_crowler.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
markers = [
  "mocked_integration: deterministic offline integration tests with stubs/mocks",
  "live: real integration checks that require live external dependencies",
]
